--- a/Unigram/Unigram/App.xaml
+++ b/Unigram/Unigram/App.xaml
@@ -2,6 +2,7 @@
     x:Class="Unigram.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:navigation="using:Unigram.Navigation"
     xmlns:themes="using:Unigram.Themes"
     xmlns:common="using:Unigram.Common"
@@ -75,6 +76,11 @@
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminatePointerOverForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminatePressedForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminateDisabledForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
+
+                    <StaticResource x:Key="NavigationViewChromePaneBackground" ResourceKey="SystemControlChromeMediumLowAcrylicElementMediumBrush" />
+                    <StaticResource x:Key="NavigationViewAccentPaneBackground" ResourceKey="SystemControlAccentAcrylicElementAccentMediumHighBrush" />
+
+                    <StaticResource x:Key="UndoViewBackgroundBrush" ResourceKey="SystemControlChromeMediumAcrylicElementMediumBrush"/>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Light">
                     <Color x:Key="SystemChromeMediumHighColor">#FFE6E6E6</Color>
@@ -139,9 +145,20 @@
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminatePointerOverForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminatePressedForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
                     <SolidColorBrush x:Key="ExpanderButtonStyleIndeterminateDisabledForegroundBrush" Color="{StaticResource SystemBaseHighColor}" />
+
+                    <StaticResource x:Key="NavigationViewChromePaneBackground" ResourceKey="SystemControlChromeMediumLowAcrylicElementMediumBrush" />
+                    <StaticResource x:Key="NavigationViewAccentPaneBackground" ResourceKey="SystemControlAccentAcrylicElementAccentMediumHighBrush" />
+
+                    <StaticResource x:Key="UndoViewBackgroundBrush" ResourceKey="SystemControlChromeMediumAcrylicElementMediumBrush"/>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
 
+            <Thickness x:Key="EllipsisButtonPadding">12,19,12,0</Thickness>
+            <x:Double x:Key="ChatPhotoSize">36</x:Double>
+            <x:Double x:Key="AppBarThemeCompactHeight">48</x:Double>
+            <x:Double x:Key="NavigationViewTopPaneHeight">48</x:Double>
+
+            <x:Double x:Key="GlyphButtonFontSize">16</x:Double>
             <Thickness x:Key="GlyphButtonPadding">4</Thickness>
             <CornerRadius x:Key="GlyphButtonCornerRadius">4</CornerRadius>
             
@@ -264,8 +281,10 @@
             </Style>
 
             <ResourceDictionary.MergedDictionaries>
-                <themes:Fluent/>
+                <muxc:XamlControlsResources/>
+
                 <common:Theme/>
+                <ResourceDictionary Source="ms-appx:///Common/CommonStyles.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Themes/Accent.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Themes/TeachingTip.xaml"/>
                 <themes:Messages/>
