--- a/Unigram/Unigram/Common/CommonStyles.xaml
+++ b/Unigram/Unigram/Common/CommonStyles.xaml
@@ -1,7 +1,8 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:Unigram.Common"
-                    xmlns:controls="using:Unigram.Controls">
+                    xmlns:controls="using:Unigram.Controls"
+                    xmlns:media="using:Microsoft.UI.Xaml.Media">
 
     <Style x:Key="SettingsGroupPanelStyle" TargetType="StackPanel">
         <Setter Property="Padding" Value="12,8,12,12"/>
@@ -273,11 +274,17 @@
                                 </VisualState>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPointerOver}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundPointerOver}"/>
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="Pressed" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="Pressed" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPressed}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundPressed}"/>
                                     </VisualState.Setters>
                                 </VisualState>
@@ -289,11 +296,17 @@
                                 </VisualState>
                                 <VisualState x:Name="CheckedPointerOver">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPointerOver}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundPointerOver}"/>
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="CheckedPressed">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="Pressed" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="Pressed" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPressed}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundPressed}"/>
                                     </VisualState.Setters>
                                 </VisualState>
@@ -307,11 +320,17 @@
                                 </VisualState>
                                 <VisualState x:Name="IndeterminatePointerOver">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPointerOver}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundSelectedPointerOver}"/>
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="IndeterminatePressed">
                                     <VisualState.Setters>
+                                        <Setter Target="ContentPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.(media:RevealBrush.State)" Value="PointerOver" />
+                                        <Setter Target="BorderPresenter.BorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPressed}" />
                                         <Setter Target="RootGrid.Background" Value="{ThemeResource ListViewItemBackgroundSelectedPressed}"/>
                                     </VisualState.Setters>
                                 </VisualState>
@@ -320,17 +339,21 @@
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
+                        <Border x:Name="BorderPresenter"
+                                BorderBrush="{ThemeResource ListViewItemRevealBorderBrush}"
+                                BorderThickness="{ThemeResource ListViewItemRevealBorderThemeThickness}"/>
                         <ContentPresenter x:Name="ContentPresenter"
-                                              AutomationProperties.AccessibilityView="Raw"
-                                              BorderBrush="{TemplateBinding BorderBrush}"
-                                              BorderThickness="{TemplateBinding BorderThickness}"
-                                              ContentTemplate="{TemplateBinding ContentTemplate}"
-                                              ContentTransitions="{TemplateBinding ContentTransitions}"
-                                              Content="{TemplateBinding Content}"
-                                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              Padding="{TemplateBinding Padding}"
-                                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              Grid.Column="1"/>
+                                          AutomationProperties.AccessibilityView="Raw"
+                                          Background="{ThemeResource ListViewItemRevealBackground}"
+                                          BorderBrush="{TemplateBinding BorderBrush}"
+                                          BorderThickness="{TemplateBinding BorderThickness}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          ContentTransitions="{TemplateBinding ContentTransitions}"
+                                          Content="{TemplateBinding Content}"
+                                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          Padding="{TemplateBinding Padding}"
+                                          VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          Grid.Column="1"/>
 
                     </Grid>
                 </ControlTemplate>
