--- a/Unigram/Unigram/Views/Supergroups/SupergroupAdministratorsPage.xaml
+++ b/Unigram/Unigram/Views/Supergroups/SupergroupAdministratorsPage.xaml
@@ -26,6 +26,7 @@
             ItemsSource="{x:Bind ViewModel.Members}"
             ItemClick="ListView_ItemClick"
             IsItemClickEnabled="True"
+            ChoosingItemContainer="OnChoosingItemContainer"
             ContainerContentChanging="OnContainerContentChanging"
             SelectionMode="None">
             <ListView.Header>
@@ -49,7 +50,7 @@
             </ListView.Header>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Padding="0,6" Background="Transparent" ContextRequested="Member_ContextRequested">
+                    <Grid Padding="0,6" Background="Transparent">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
