--- a/Unigram/Unigram/Views/Supergroups/SupergroupBannedPage.xaml
+++ b/Unigram/Unigram/Views/Supergroups/SupergroupBannedPage.xaml
@@ -18,7 +18,7 @@
 
     <Page.Resources>
         <DataTemplate x:Key="MemberTemplate">
-            <Grid Margin="0,6" Background="Transparent" ContextRequested="Member_ContextRequested">
+            <Grid Margin="0,6" Background="Transparent">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -81,6 +81,7 @@
             ItemTemplate="{StaticResource MemberTemplate}"
             ItemClick="ListView_ItemClick"
             IsItemClickEnabled="True"
+            ChoosingItemContainer="OnChoosingItemContainer"
             ContainerContentChanging="OnContainerContentChanging"
             SelectionMode="None">
             <ListView.ItemContainerStyle>
@@ -103,6 +104,7 @@
                 ItemTemplate="{StaticResource MemberTemplate}"
                 ItemClick="ListView_ItemClick"
                 IsItemClickEnabled="True"
+                ChoosingItemContainer="OnChoosingItemContainer"
                 ContainerContentChanging="OnContainerContentChanging"
                 SelectionMode="None"
                 Grid.Row="1">
