--- a/Unigram/Unigram/Views/Supergroups/SupergroupPermissionsPage.xaml
+++ b/Unigram/Unigram/Views/Supergroups/SupergroupPermissionsPage.xaml
@@ -18,7 +18,7 @@
 
     <Page.Resources>
         <DataTemplate x:Key="MemberTemplate">
-            <Grid Margin="0,6" Background="Transparent" ContextRequested="Member_ContextRequested">
+            <Grid Margin="0,6" Background="Transparent">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
